[tool.poetry]
name = "qimia-ai-openai-python-sdk-demo"
version = "0.1.0"
description = ""
authors = ["Anıl Aydıner <a.aydiner@qimia.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
